Overhauled class generation (#28)